generated/manifests/prod-axon/kube-prometheus-stack/CiliumNetworkPolicy-allow-prometheus-scrape-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-scrape-egress
  namespace: monitoring
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "9962"
              protocol: TCP
            - port: "9963"
              protocol: TCP
            - port: "9965"
              protocol: TCP
    - toCIDR:
        - 10.10.10.1/32
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
